Reduced the pom file to the minimum

--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!--
+    Detailed info about the POM.
+    https://maven.apache.org/guides/introduction/introduction-to-the-pom.html
+
+    A Project Object Model or POM is the fundamental unit of work in Maven.
+    It is an XML file that contains information about the project and configuration details used by Maven to build the project.
+    -->
+
+    <!--
+    The version of the POM file, version 4.0.0 is the one we are using which is compliant with Maven 3.
+    This is required.
+    -->
     <modelVersion>4.0.0</modelVersion>
 
+    <!--
+    Minimum required info about this project
+    -->
     <groupId>be.webtechie</groupId>
     <artifactId>MinimalJavaFx11Application</artifactId>
     <version>0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
-    <name>Minimal JavaFX11 application</name>
-
+    <!--
+    Avoid the following error during build:
+    [WARNING] Using platform encoding (UTF-8 actually) to copy filtered resources, i.e. build is platform dependent!
+    -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>Main</mainClass>
     </properties>
 
-    <organization>
-        <name>www.webtechie.be</name>
-    </organization>
-
+    <!--
+    Define extra dependencies needed in the application.
+    In this example we are only using JavaFX Controls.
+    -->
     <dependencies>
-        <!-- JavaFX core libraries -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -27,8 +41,18 @@
         </dependency>
     </dependencies>
 
+    <!--
+    Build configuration to be able to generate a minimal JAR (using modularization introduced in Java 9).
+    https://steveperkins.com/using-java-9-modularization-to-ship-zero-dependency-native-apps/
+    -->
     <build>
         <plugins>
+            <!--
+            The Compiler Plugin is used to compile the sources of your project.
+            https://maven.apache.org/plugins/maven-compiler-plugin/index.html
+
+            It provides two maven goals "compiler:compile" and "compiler:testCompile"
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -37,6 +61,12 @@
                     <release>11</release>
                 </configuration>
             </plugin>
+            <!--
+            This plugin provides the capability to build jars.
+            https://maven.apache.org/plugins/maven-jar-plugin/
+
+            It provides two maven goals "jar:jar" and "jar:test-jar"
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -52,6 +82,14 @@
                     </archive>
                 </configuration>
             </plugin>
+            <!--
+            The plugin helps to execute system and Java programs.
+            https://www.mojohaus.org/exec-maven-plugin/
+
+            It provides two maven goals "exec:exec" and "exec:java"
+
+            Allows us to run this test application from our IDE by first using "compiler:compile" and then "exec:java"
+            -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -68,7 +106,5 @@
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
-
 </project>
